@@ -31,6 +31,7 @@
 - Support search and field_search at same time
 - Support for overriding how download url is get for dragonfly attachment
 - Trigger as:element_removed when ActiveScaffold.remove is called
+- use preload instead of includes to preload associations without left join when not used for searching or sorting
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
